# bos

./: .gitignore  Bos.code-workspace  CreateStartDate.py  DailyMilkRunner.py  I_U_merge.py  InsemUltraBasics.py  InsemUltraFunctions.py  MilkBasics.py  Q:\My Drive\COWS\reports\allx.csv  RawMilkUpdate.py  RemoteFilesaveUtils.py  RunFeedFunctions.py  RunFinanceFunctions.py  RunInsemFunctionsOnly.py  RunInsemStatusIU.py  RunInsemUltra.py  RunMilkDailyUpdate.py  RunMilkDataUpdate.py  RunMilkFuncts.py  Run_feedcost_functions.py  Run_finance_functions.py  Run_insem_status_I_U.py  Run_lactation_plot.py  Run_milk_dash_app.bat  Run_milk_data_update.py  Run_update_plots.bat  __init__.py  ab.py  app.py  azure_blob.py  birthdeath.py  bos.code-workspace  bos_backend.py  check_laststop.py  config_path.py  container.py  convert_to_DB.py  cow_PL.py  data_backup.py  date_range.py  (+47 more)
backup/: feed_backup.py  finance_backup.py  insem_data_backup.py
dash_app/: dynamic_loader.py  formatting.py  json_utils.py  module_config.py
feed_functions/: feed_cost_basics.py  feed_inventory.py  feedcost_CP_005_21P.py  feedcost_CP_milk2.py  feedcost_basics.py  feedcost_beans.py  feedcost_by_group.py  feedcost_by_group_by_day.py  feedcost_bypass_fat.py  feedcost_cassava.py  feedcost_corn.py  feedcost_data.py  feedcost_data_loader.py  feedcost_sequences.py  feedcost_total.py  heifer_cost_model.py  heifers.py  nutrition_cows.py
feed_related/: CreateStartDate.py  feed_cost.py  feed_cost_basics.py  nutrition_cows.py
finance/: BKK_bank.py  NetRevenue.py  create_milk_revenue.py  milk_income.py
(+156 files in other folders)
